...
    <include
        android:id="@+id/include"
        layout="@layout/content_scrolling"
        android:layout_height="477dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSkip"
        android:text="FINISH"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom|center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
